Use fixed tokens below xs spacing

--- a/css/module/tokens.css
+++ b/css/module/tokens.css
@@ -19,8 +19,8 @@
     /* -- Spacing */
 
     /* @link https://utopia.fyi/space/calculator?c=328,16,1.2,1116,18,1.25,9,3,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l&g=s,l,xl,12 */
-    --space-3xs: clamp(0.25rem, 0.224rem + 0.1269vw, 0.3125rem);
-    --space-2xs: clamp(0.5rem, 0.474rem + 0.1269vw, 0.5625rem);
+    --space-3xs: 4px;
+    --space-2xs: 8px;
     --space-xs: clamp(0.75rem, 0.698rem + 0.2538vw, 0.875rem);
     --space-s: clamp(1rem, 0.948rem + 0.2538vw, 1.125rem);
     --space-m: clamp(1.5rem, 1.422rem + 0.3807vw, 1.6875rem);
@@ -140,6 +140,9 @@
     --color-grey-1100: #0c1a26;
     --color-grey-1200: #07111c;
 
+    --color-orange-300: #fdba74;
+    --color-orange-700: #c2410c;
+
     --theme-glass-blur: blur(10px);
     --theme-glass-blur-strong: blur(20px);
 }
@@ -226,6 +229,8 @@
     --theme-code-bg: var(--color-grey-800);
 
     --theme-diagram-bg: var(--color-black-fade-30);
+
+    --theme-warning: var(--color-orange-300);
 }
 
 [data-theme='light'] {
@@ -250,7 +255,7 @@
     --theme-header-bg: rgb(from var(--theme-bg) r g b / 92%);
     --theme-footer-bg: var(--theme-bg-alt);
 
-    --theme-button-standard-fg: var(--theme-ink);
+    --theme-button-standard-fg: var(--color-teal-750);
     --theme-button-standard-fg-hover: var(--theme-accent);
     --theme-button-standard-bg: var(--color-white-fade-70);
     --theme-button-standard-border: var(--color-teal-200);
@@ -295,4 +300,6 @@
     --theme-code-bg: var(--color-teal-150);
 
     --theme-diagram-bg: var(--color-black-fade-02);
+
+    --theme-warning: var(--color-orange-700);
 }
